# rust-auth

./: .gitignore  Cargo.toml  README.md
src/: data.rs  database.rs  main.rs
src/endpoints/: auth.rs
