[package]
name = "hackathon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
mongodb = "3.2.3"
argon2 = "0.5.3"
serde = "1.0.219"
hmac = "0.12.1"
jsonwebtoken = "9.3.1"
time = "0.3.41"